--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
