--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "mongoose-bcrypt": "^1.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
