--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.7.7",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
